--- a/Traffic_Sign_Classifier_start.ipynb
+++ b/Traffic_Sign_Classifier_start.ipynb
@@ -27,6 +27,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "##########################\n",
+    "# To do:\n",
+    "#\n",
+    "# Split into validate chunks for cross validation\n",
+    "# Augment the data\n",
+    "# Visualize the weights\n",
+    "# (Figure out why setting the seed does not make determinate results.)\n",
+    "# Tweak hyperparameters to improve score.\n",
+    "##########################"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 32,
    "metadata": {
     "collapsed": false
